examples/kube/daemonset/testpod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: testns-nginx
  labels:
    name: testns-nginx

---
kind: Service
apiVersion: v1
metadata:
  name: testpod-nginx
  namespace: testns-nginx
  labels:
    name: testpod-nginx
spec:
  selector:
    name: testpod-nginx
  ports:
    - name: tcp-80
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: testns-nginx
  labels:
    name: testpod-nginx
spec:
  containers:
  - image: nginx:1.21-alpine
    name: nginx
    ports:
      - containerPort: 80
        hostPort: 80
        name: http
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testpod-nginx
  namespace: testns-nginx
spec:
  policyTypes:
    - Egress
    - Ingress
  podSelector:
    matchLabels:
      name: testpod-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: easy-proxy
          namespaceSelector: {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              name: easy-proxy
          namespaceSelector: {}
